2013-07-22 Jiyoun Park

        * Evas: fix infinite loop if app use ecore evas image

2013-07-23  Yury Usischev

        * Fix a long-standing off-by-1 in the C MUL4_SYM "simd" multiplier.

2013-07-22 José Roberto de Souza

        * Edje: Refactor signal callbacks flags

2013-07-19  Cedric Bail

	* Edje: add threshold to draggable part.

2013-07-18 José Roberto de Souza

        * Edje: Correctly set match flag in _edje_signal_callback_move_last()
        * Fix size calculation of flags of signal callbacks

2013-07-18  Mike Blumenkrantz

        * Ecore-X: add ECORE_X_SYNC env variable for xlib backend

2013-07-18  Cedric Bail

	* Edje: fix some logic in the fixed point path.
	* Edje: improve accuracy of math part positionning.

2013-07-17  Guillaume Friloux

        * Ecore_Con: fix ecore_con_server_timeout_set(). It was changing the
          timeout value, but not the timer.

2013-07-17  Mike Blumenkrantz

        * Ecore_X: add error messages for xlib, ECORE_X_ATOM_XDND_DIRECTSAVE0,
          fix ecore_x_e_comp_pixmap_set to delete pixmap atom correctly

2013-07-15  Mike Blumenkrantz

        * Ecore_X: fix BadMatch errors in ecore_x_image_get when requested
          size was larger than XImage size

2013-07-15  Cedric Bail

	* Eet: Add support for EET_T_VALUE to serialize Eina_Value pointer.

2013-07-11  Chris Michael

        * Ecore_Evas: Added functions to retieve the pixmap depth, visual,
          and colormap

2013-07-11  Chris Michael

        * Ecore_Evas: Updated doxygen comments for pixmap functions
        * Ecore_Evas: Check for valid interface pixmap_get function before
          calling it.
        * Ecore_Evas: Removed need for prev_front pixmap field in structure
          and just use a temporary variable.

2013-07-10  Cedric Bail

	* Eina: Add eina_tiler_empty.

2013-07-08  Chris Michael

        * Ecore_Evas: Added pointer abtractions (requested by Mike)

2013-07-08  Chris Michael
