@@ -340,6 +340,7 @@ Fixes:
     * Ecore_Evas:
      - Fix build of Ecore_Evas_Extn on Solaris.
      - Fix many memory problems with ecore_evas_extn.
+     - Fix usage of underlying X window after it has received a destroy event
     * Ecore_X:
      - Fix possible memory corruption in xrandr EDID functions.
      - Fix x11 error sync issue with ecore_x_image_get().
